Add bank_system v3

--- a/project/bank_system/CMakeLists.txt
+++ b/project/bank_system/CMakeLists.txt
@@ -4,4 +4,9 @@ set (PROJECT_NAME "bank_system")
 set (CMAKE_CXX_STANDARD 11)
 
 project (${PROJECT_NAME})
-add_executable(${PROJECT_NAME} main.cpp)
+add_executable(
+        ${PROJECT_NAME}
+        main.cpp
+        account.cpp
+        normal_account.cpp
+        high_credit_account.cpp)
